--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==1.6.5
 Pillow==2.4.0
+django-suit==0.2.7
 django-filebrowser-no-grappelli==3.1.1
 django-fluent-pages==0.8.6
 django-mptt==0.6.1
